k8s/base/postgres.statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: auth-db
spec:
  serviceName: "auth-db"
  replicas: 1
  selector:
    matchLabels:
      app: auth-db
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      containers:
      - name: postgres
        image: postgres:16
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: auth-db-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: auth-db-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: auth-db
spec:
  ports:
  - port: 5432
  selector:
    app: auth-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: files-db
spec:
  serviceName: "files-db"
  replicas: 1
  selector:
    matchLabels:
      app: files-db
  template:
    metadata:
      labels:
        app: files-db
    spec:
      containers:
      - name: postgres
        image: postgres:16
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: files-db-data
          mountPath: /var/lib/postgresql/data
        - name: files-db-init
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: files-db-init
        configMap:
          name: files-db-init
  volumeClaimTemplates:
  - metadata:
      name: files-db-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: files-db
spec:
  ports:
  - port: 5432
  selector:
    app: files-db
